Player is now a silly looking spaceship

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-2">
                     <div id="viewport">
                         <div id="gameWorld">
-                            <img class="cellObject" id="player" src="img/letter_a.jpg" alt="">
+                            <img class="cellObject" id="player" src="img/player.jpeg" alt="">
                         </div>
                     </div>
                 </div>
