Fixed Canvas spelling error.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
         <script src="js/config.js"></script>
-        <script src="js/worldCanvis.js"></script>
+        <script src="js/worldCanvas.js"></script>
         <script src="js/Resources.js"></script>
         <script src="js/Sensors.js"></script>
         <script src="js/SpaceCraftMovement.js"></script>
