Added setters to resources. Fixed menu flow issue with buttons. Fixed spelling error in config. Added saving/loading. Saving is done, loading is nearly complete.

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 
             <div class="page" id="savePage">
                 <h2>Nameable Persistent State</h2>
-                <input type="text" id="filename"> Filename <input type="button" value="Load" onclick=loadGame(filename.value)> <input type="button" value="Save" onclick=saveGame(filename.value)>
-                <br>
-                <input type="button" value="Done" onclick=switchToPage("mainMenu")>
+                <input type="text" id="filename"> Filename <input type="button" value="Load and Play" onclick=loadGame(filename.value)> <input type="button" value="Save and Exit" onclick=saveGame(filename.value)>
+                <br><br>
+                <input type="button" value="Return to Main Menu" onclick=switchToPage("mainMenu")>
             </div>
 
             <div class="page" id="GameOver">
