Added fields in index.html for health and credits

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                         <p></p>
                         <p>Energy <input type=text name=energy size=4 onChange="resources.updateResources()">
                         <p>Supplies <input type=text name=supplies size=4 onChange="resources.updateResources()">%
+                        <p>Credits <input type=text name=credits size=4 onChange="resources.updateResources()">%
+                        <p>Health <input type=text name=health size=4 onChange="resources.updateResources()">%
                         <p>
                         <hr>
                         MAKE A MOVE
