Added the ability to set initial health

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                         <input type="number" name="initialCredits" min=0 max=10000>
                         Initial credits<span class="invalidInputMessage"></span>
                     </div>
+                    <div class="numberField">
+                        <input type="number" name="initialHealth" min=0 max=10000>
+                        Initial health<span class="invalidInputMessage"></span>
+                    </div>
                     <input type="checkbox" name="godMode">God mode
                     <br>
                     <input type="checkbox" name="staticWormholeBehavior">Static wormhole behavior
