--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script src="js/saveGame.js"></script>
         <script src="js/loadGame.js"></script>
         <script src="js/checkSaveNames.js"></script>
+        <script src="js/addImage.js"></script>
 
         <script src="js/main.js"></script>
 
