--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <form id="UI" name=UI>
                         <h2>STATUS</h2>
                         <p>Coordinates:
-                        X <input type=text name=xValue size=4>
-                        Y <input type=text name=yValue size=4>
+                        X <input type=text name=xValue size=4 onChange="position.updateCPs()">
+                        Y <input type=text name=yValue size=4 onChange="position.updateCPs()">
                         </p>
                         <p></p>
                         <p>Energy <input type=text name=energy size=4 onChange="resources.updateResources()">
