Add inputPanel.js to script sources

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script src="js/Gazetteer.js"></script>
         <script src="js/switchIfChecked.js"></script>
         <script src="js/checkCollision.js"></script>
+        <script src="js/inputPanel.js"></script>
         <script src="js/planet.js"></script>
         <script src="js/saveGame.js"></script>
         <script src="js/loadGame.js"></script>
