--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="js/loadGame.js"></script>
         <script src="js/checkSaveNames.js"></script>
         <script src="js/addImage.js"></script>
+        <script src = "js/orbit.js"></script>
 
         <script src="js/main.js"></script>
 
