Switch naming convention of "initialCredits/Health/etc." to "maximumCredits/Health/etc." in config

--- a/index.html
+++ b/index.html
@@ -114,20 +114,20 @@
                         Board height<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialEnergy" min=0 max=10000>
-                        Initial energy<span class="invalidInputMessage"></span>
+                        <input type="number" name="maximumEnergy" min=0 max=10000>
+                        Maximum energy<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialSupplies" min=0 max=10000>
-                        Initial supplies<span class="invalidInputMessage"></span>
+                        <input type="number" name="maximumSupplies" min=0 max=10000>
+                        Maximum supplies<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialCredits" min=0 max=10000>
-                        Initial credits<span class="invalidInputMessage"></span>
+                        <input type="number" name="maximumCredits" min=0 max=10000>
+                        Maximum credits<span class="invalidInputMessage"></span>
                     </div>
                     <div class="numberField">
-                        <input type="number" name="initialHealth" min=0 max=10000>
-                        Initial health<span class="invalidInputMessage"></span>
+                        <input type="number" name="maximumHealth" min=0 max=10000>
+                        Maximum health<span class="invalidInputMessage"></span>
                     </div>
                     <input type="checkbox" name="godMode">God mode
                     <br>
