--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script src="js/config.js"></script>
         <script src="js/map.js"></script>
         <script src="js/worldCanvas.js"></script>
+        <script src="js/planet.js"></script>
+        <script src="js/artifacts.js"></script>
         <script src="js/Resources.js"></script>
         <script src="js/Sensors.js"></script>
         <script src="js/SpaceCraftMovement.js"></script>
@@ -21,7 +23,6 @@
         <script src="js/switchIfChecked.js"></script>
         <script src="js/checkCollision.js"></script>
         <script src="js/inputPanel.js"></script>
-        <script src="js/planet.js"></script>
         <script src="js/saveGame.js"></script>
         <script src="js/loadGame.js"></script>
         <script src="js/checkSaveNames.js"></script>
