--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src="js/loadSavedSessionsToSelector.js"></script>
         <script src="js/addImage.js"></script>
         <script src = "js/orbit.js"></script>
+        <script src="js/badmax.js"></script>
 
         <script src="js/main.js"></script>
 
