--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
         <script src="js/config.js"></script>
+        <script src="js/celestialArtifact.js"></script>
         <script src="js/map.js"></script>
         <script src="js/worldCanvas.js"></script>
         <script src="js/planet.js"></script>
