Adding an object to worldmap adds its id and location to the gazetteer

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
         <script src="js/config.js"></script>
         <script src="js/celestialArtifact.js"></script>
+        <script src="js/Gazetteer.js"></script>
         <script src="js/map.js"></script>
         <script src="js/worldCanvas.js"></script>
         <script src="js/planet.js"></script>
-        <script src="js/artifacts.js"></script>
+        <script src="js/initPlanets.js"></script>
         <script src="js/Resources.js"></script>
         <script src="js/Sensors.js"></script>
         <script src="js/SpaceCraftMovement.js"></script>
@@ -20,7 +21,6 @@
         <script src="js/addArtifact.js"></script>
         <script src="js/initializeMap.js"></script>
         <script src="js/loadOptions.js"></script>
-        <script src="js/Gazetteer.js"></script>
         <script src="js/switchIfChecked.js"></script>
         <script src="js/checkCollision.js"></script>
         <script src="js/inputPanel.js"></script>
