--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="col-2">
                     <div id="viewport">
                         <div id="gameWorld">
-                            <img class="cellObject" id="player" src="img/player.jpeg" alt="">
+                            <img class="cellObject" id="player" src="img/player.png" alt="">
                         </div>
                     </div>
                 </div>
