Renamed asteeroid and added meteor artifact.
In the process of adding an artifact to the game, I renamed everything that needed to be an asteroid and then added artifact placement code for meteors as well.

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     <option value="SpaceStation">Space Station</option>
                     <option value="Wormhole">Wormhole</option>
                     <option value="Freighter">Abandoned Freighter</option>
+                    <option value="Meteor">Meteor</option>
                 </select>
                 <br>
                 <br>
