--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="js/planet.js"></script>
         <script src="js/initPlanets.js"></script>
         <script src="js/Resources.js"></script>
+        <script src="js/meteor.js"></script>
         <script src="js/Sensors.js"></script>
         <script src="js/SpaceCraftMovement.js"></script>
         <script src="js/switchToPage.js"></script>
