Seperate css styles into different files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>SpaceHunt</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/game.css">
         <link rel="stylesheet" href="css/ui.css">
         <!-- Google Font Link -->
         <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
