Add the Wormhole object

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="js/worldCanvas.js"></script>
         <script src="js/map.js"></script>
         <script src="js/planet.js"></script>
+        <script src="js/wormhole.js"></script>
         <script src="js/initPlanets.js"></script>
         <script src="js/Resources.js"></script>
         <script src="js/meteor.js"></script>
